--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,45 @@
-# General build folders
-*build/
+# Primary .gitignore file
 
+# Ansible files
+*.retry
+
+# DBs
+*.db
+
+# Debug
+*[lL][oO][gG]
+*Debug/
+
+# Other
+*.csv
+*.pdf
+*.pem
+*.txt
+*.[wW][aA][rR]
+*.[zZ][iI][pP]
+*secrets*
+
+# Output
+*.ipynb_checkpoints/
+*.o
+*.[oO][uU][tT]
 *cache*
+*build/
+*node_modules/
+*output/
+*target/
+*temp/
+
+# Pictures
+*.[jJ][pP][gG]
+*.[jJ][pP][eE][gG]
+*.[pP][nN][gG]
+
+# Tools
+*.cproject
+*.idea
+*.iml
+*.project
+*.settings/
+*.vscode/
+*env/
